# vrc-tracker

./: package-lock.json  package.json  tauri.key  tauri.key.pub
.github/workflows/: release.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
