[package]
name = "vrc-tracker"
version = "0.0.1"
description = "VRChat Data Tracker"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
notify = "6.0"
rusqlite = { version = "0.29", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1.4"
glob = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
